--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 th, td {
@@ -9,8 +9,6 @@ th, td {
 }
 
 table {
-  margin-left: auto;
-  margin-right: auto;
   table-layout: fixed;
   border-collapse: collapse;
   border: 1px solid blue;
@@ -33,6 +31,10 @@ tbody tr:nth-child(even) {
   background-color: #ceddff;
 }
 
+.balances-table__ticker-symbol-column {
+  text-align: left;
+}
+
 .div-btc-price {
   padding: 10px;
   height: 50px;
@@ -46,4 +48,44 @@ tbody tr:nth-child(even) {
   height: 50px;
   width: 50px;
   float: none;
+}
+
+.div-trade-component-container {
+  max-width: 500px;
+
+}
+
+.main__main-container {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  padding: 8px 12px;
+  margin: 8px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  border-color: blue;
+  color: blue;
+}
+
+.make-trade__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 300px;
+}
+
+.make-trade__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 300px;
+}
+
+.make-trade__input {
+  width: 150px;
+  margin: 3px;
+  border-radius: 3px;
+  border-color: blue;
 }
