--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ button {
 .make-trade__form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   max-width: 300px;
 }
 
